// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyle works with function 1`] = `
<DocumentFragment>
  .css-ng7bw9 {
  color: #3B5998;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  color: blue;
}

<div
    class="css-ng7bw9"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple object 1`] = `
<DocumentFragment>
  .css-1f227de {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  color: blue;
}

<div
    class="css-1f227de"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple string 1`] = `
<DocumentFragment>
  .css-14q17fo {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  color: blue;
}

<div
    class="css-14q17fo"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple style 1`] = `
<DocumentFragment>
  .css-8xq7br {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  color: blue;
}

<div
    class="css-8xq7br"
  />
</DocumentFragment>
`;
